spring-demo/infra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: ws
        image: registry.example.com/spring-demo
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 0
        resources:
          requests:
            cpu: 256m
            memory: 512Mi
          limits:
            cpu: 256m
            memory: 512Mi
