spring-demo/infra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws
spec:
  ports:
  - port: 8080
    protocol: TCP
