spring-demo/infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws
spec:
  ingressClassName: nginx
  rules:
  - host: spring-demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws
            port:
              number: 8080
